modules/7-california/15-Ec2.tf
resource "aws_instance" "sysLog_Transfer_california" {
  ami               = data.aws_ami.latest_linux_image.id
  instance_type     = "t2.micro"
  tenancy           = "default"
  availability_zone = var.availability_zones[20].zone
 
  subnet_id         = aws_subnet.private-us-west-1c.id
  security_groups   = [aws_security_group.myApp-SG03-sysLogServers.id]

  tags = {
    "name" = "sysLog_Transfer_california"
  }
}

data "aws_ami" "latest_linux_image" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}
